--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ packaging==23.2
 pandas==2.1.3
 pandocfilters==1.5.0
 parso==0.8.3
+patsy==0.5.3
 pexpect==4.8.0
 Pillow==10.1.0
 platformdirs==4.0.0
@@ -96,6 +97,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.0
 terminado==0.18.0
 threadpoolctl==3.2.0
 tinycss2==1.2.1
